functions all finally working, made a small app for Bangle.js which keeps the screen clear from the clock. Need to implement scoring system and logic for pathways.

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <body>
         <h1><strong>Passive Verification Device</strong> AI => PVD bridge v2</h1>
         <button id="connectButton" onclick="connectBangle()">Connect Bangle.js</button>
-        <button id="startWebSocket" onclick="startWebSocket()">Start WebSocket Server</button>
+        <button id="alertTest" onclick="alertTest('Seven','First line','Second line','Thurd line')">Alert Test</button>
         <br>
         <br>
         <br>
@@ -27,8 +27,8 @@
         <button onclick="setFontVector('10')">10px Vector font</button>
         <button onclick="setBgColor('0,0,0')">Set Background colour black</button>
         <button onclick="setColor('-1')">Set Font colour white</button>
-        <button onclick="drawString('TEST')">Write TEST</button>
-        <button onclick="drawString('Everybody and their friends cant smell what the Rock is cooking')">Write sentence</button>
+        <button onclick="drawString('TEST',88,88)">Write TEST</button>
+        <button onclick="drawString('Everybody and their friends are here.',88,88)">Write sentence</button>
         <button onclick="vibrate(200)">Vibrate</button>
         <button onclick="clearScreen()">Clear screen</button>
 
