Purged all command line faff. No calls the Ollama API and delivers via WebSocket

--- a/app/test.html
+++ b/app/test.html
@@ -10,12 +10,15 @@
         <script src="js/bangleFunctions.js"></script>
         <script src="js/pvdFunctions.js"></script>
         <script src="js/puck.js"></script>
+        <script src="js/test.js"></script>
     </head>
     <body>
         <h1><strong>Passive Verification Device</strong> AI => PVD bridge v2</h1>
         <button id="connectButton" onclick="connectBangle()">Connect Bangle.js</button>
         <button id="alertTest" onclick="alertTest('Seven','First line','Second line','Thurd line')">Alert Test</button>
         <br>
+        <br>
+        <button onclick="llmRequestTest('how are you today?')">LLM TEST<</button>
         <br>
         <br>
         <h2>Functions</h2>
