WIP rebuilding the pvdBridge.js module

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
         <h1><strong>Passive Verification Device</strong> AI => PVD bridge v2</h1>
         <button id="connectButton" onclick="connectBangle()">Connect Bangle.js</button>
         <button id="alertTest" onclick="alertTest('Seven','First line','Second line','Thurd line')">Alert Test</button>
+        <button id="startWebSocket" onclick="startWebSocket()">Initiate WebSocket Listening</button>
         <br>
         <br>
         <br>
