--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,13 @@
         <button id="startWebSocket" onclick="startWebSocket()">Initiate WebSocket Listening</button>
         <br>
         <br>
+        <button id="test1" onclick="testDataHandler('gfnkoe','X','')">Data Handler Test 1</button>
+        <button id="test2" onclick="testDataHandler('Now is very long','5','Now is both short and long, it depends')">Data Handler Test 2</button>
+        <button id="test3" onclick="testDataHandler('Everybody wants to rule the world','9','People fucking love power, so a lot of people do want to rule the world. But not everybody wants to rule the world')">Data Handler Test 3</button>
+        <button id="test4" onclick="testDataHandler('We can drink matcha','3','AI cannot drink matcha')">Data Handler Test 4</button>
+        <button id="test5" onclick="testDataHandler('Another request','4','Perhaps')">Data Handler Test 5</button>
+        <button id="test5" onclick="testDataHandler('Another request','1',`Perhaps it's best we stop testing now`)">Data Handler Test 6</button>
+        <br>
         <br>
         <h2>Functions</h2>
         <button onclick="setLCDPower('1')">Turn on LCD</button>
