working with a couple of errors. but working

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
         <button id="startWebSocket" onclick="startWebSocket()">Initiate WebSocket Listening</button>
         <br>
         <br>
-        <button id="test1" onclick="testDataHandler('gfnkoe','X','')">Data Handler Test 1</button>
+        <button id="test1" onclick="testDataHandler('gfnkoe','X','testtest')">Data Handler Test 1</button>
         <button id="test2" onclick="testDataHandler('Now is very long','5','Now is both short and long, it depends')">Data Handler Test 2</button>
         <button id="test3" onclick="testDataHandler('Everybody wants to rule the world','9','People fucking love power, so a lot of people do want to rule the world. But not everybody wants to rule the world')">Data Handler Test 3</button>
         <button id="test4" onclick="testDataHandler('We can drink matcha','3','AI cannot drink matcha')">Data Handler Test 4</button>
