--- a/app/index.html
+++ b/app/index.html
@@ -13,32 +13,14 @@
     </head>
     <body>
         <h1><strong>Passive Verification Device</strong> AI => PVD bridge v2</h1>
+        <br>
         <button id="connectButton" onclick="connectBangle()">Connect Bangle.js</button>
-        <button id="alertTest" onclick="alertTest('Seven','First line','Second line','Thurd line')">Alert Test</button>
         <button id="startWebSocket" onclick="startWebSocket()">Initiate WebSocket Listening</button>
         <br>
+        <button id="testButton1" onclick="alertHandler('0,1,0', '250', 'FEELS', 'NICE', '2', '1', '9', 'this is just a test, thanks')">Test alert</button>
         <br>
-        <button id="test1" onclick="testDataHandler('gfnkoe','X','testtest')">Data Handler Test 1</button>
-        <button id="test2" onclick="testDataHandler('Now is very long','5','Now is both short and long, it depends')">Data Handler Test 2</button>
-        <button id="test3" onclick="testDataHandler('Everybody wants to rule the world','9','People fucking love power, so a lot of people do want to rule the world. But not everybody wants to rule the world')">Data Handler Test 3</button>
-        <button id="test4" onclick="testDataHandler('We can drink matcha','3','AI cannot drink matcha')">Data Handler Test 4</button>
-        <button id="test5" onclick="testDataHandler('Another request','4','Perhaps')">Data Handler Test 5</button>
-        <button id="test5" onclick="testDataHandler('Another request','1',`Perhaps it's best we stop testing now`)">Data Handler Test 6</button>
-        <br>
-        <br>
-        <h2>Functions</h2>
         <button onclick="setLCDPower('1')">Turn on LCD</button>
         <button onclick="clearScreenAll()">Reset All</button>
-        <button onclick="setFontAlignCentre()">Set Font alignment</button>
-        <button onclick="setFontBig()">Big pixel font</button>
-        <button onclick="setFontSmall()">Small pixel font</button>
-        <button onclick="setFontVector('7')">7px Vector font</button>
-        <button onclick="setFontVector('10')">10px Vector font</button>
-        <button onclick="setBgColor('0,0,0')">Set Background colour black</button>
-        <button onclick="setColor('-1')">Set Font colour white</button>
-        <button onclick="drawString('TEST',88,88)">Write TEST</button>
-        <button onclick="drawString('Everybody and their friends are here.',88,88)">Write sentence</button>
-        <button onclick="vibrate(200)">Vibrate</button>
         <button onclick="clearScreen()">Clear screen</button>
 
     </body>
