Layout changes for the Bangle.js plus a more efficient method of delivering messages. Fewer delays and more robust!

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Passive Verification Device</title>
         <link rel="stylesheet" href="css/style.css">
-        <link rel="icon" href="/images/favicon.png" sizes="192x192">
+        <link rel="icon" href="../images/favicon.png" sizes="192x192">
         <script src="js/pvdBridge.js"></script>
         <script src="js/bangleFunctions.js"></script>
         <script src="js/pvdFunctions.js"></script>
@@ -25,7 +25,7 @@
             </div>
             <div id="middle-block">
                 <div class="column-header">Testing</div>
-                <button id="testButton1" onclick="alertHandler('0,1,0', '250', 'FEELS', 'NICE', '2', '1', '9', 'this is just a test, thanks')">Alert test</button>
+                <button id="testButton1" onclick="alertHandler('0,1,0', '250', 'FEgfELS', 'NICE', 2, '1', 'X', 'this is just a test, thanks')">Alert test</button>
                 <button onclick="clearScreenAll()">Reset Screen</button>
             </div>
             <div id="right-block">
