Small updates and refinements

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
             </div>
             <div id="middle-block">
                 <div class="column-header">Testing</div>
-                <button id="testButton1" onclick="alertHandler('0,1,0', '250', 'FEgfELS', 'NICE', 2, '1', 'X', 'this is just a test, thanks')">Alert test</button>
+                <button id="testButton1" onclick="alertHandler('0,1,0', '250', 'TEST', 'ABCDEFG', 2, '1', '9', 'this is just a test, THIS IS A TEST. This a test.')">Alert test</button>
                 <button onclick="clearScreenAll()">Reset Screen</button>
             </div>
             <div id="right-block">
